Added controller.c/hpp and updated CMakelists accordingly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ list(SORT src)
 
 # Build the library
 add_library(${PROJECT_NAME} SHARED ${src})
-target_link_libraries(${PROJECT_NAME} nlopt)
+target_link_libraries(${PROJECT_NAME} nlopt config4cpp krang-utils)
 
 ## Build scripts
 
